--- a/src/shared/themes/default/radio/index.css
+++ b/src/shared/themes/default/radio/index.css
@@ -1,7 +1,8 @@
 /**
  * Default Theme - Radio Component
- * Index file that imports both light and dark variants
+ * Index file that imports common variables and both light and dark variants
  */
 
+@import './common.css';
 @import './light.css';
 @import './dark.css';
