--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -14,6 +14,7 @@
 @import './radio/index.css';
 @import './select/index.css';
 @import './textarea/index.css';
+@import './datepicker/index.css';
 
 
 /* TODO: Import other component themes as they are created
