--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -16,6 +16,8 @@
 @import './textarea/index.css';
 @import './datepicker/index.css';
 @import './timepicker/index.css';
+@import './slider-input/index.css';
+
 
 
 /* TODO: Import other component themes as they are created
