--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -17,6 +17,7 @@
 @import './datepicker/index.css';
 @import './timepicker/index.css';
 @import './slider-input/index.css';
+@import './label/index.css';
 
 
 /* TODO: Import other component themes as they are created
