--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -20,6 +20,7 @@
 @import './label/index.css';
 @import './card/index.css';
 @import './dropdown/index.css';
+@import './modal/index.css';
 
 
 /* TODO: Import other component themes as they are created
