--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -21,6 +21,7 @@
 @import './card/index.css';
 @import './dropdown/index.css';
 @import './modal/index.css';
+@import './tabs/index.css';
 
 
 /* TODO: Import other component themes as they are created
