--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -22,6 +22,7 @@
 @import './dropdown/index.css';
 @import './modal/index.css';
 @import './tabs/index.css';
+@import './collapse/index.css';
 
 
 /* TODO: Import other component themes as they are created
