--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -23,7 +23,7 @@
 @import './modal/index.css';
 @import './tabs/index.css';
 @import './collapse/index.css';
-
+@import './colorpicker/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './modal/index.css';
