--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -24,6 +24,7 @@
 @import './tabs/index.css';
 @import './collapse/index.css';
 @import './colorpicker/index.css';
+@import './table/index.css';
 
 
 /* TODO: Import other component themes as they are created
