--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -25,6 +25,7 @@
 @import './collapse/index.css';
 @import './colorpicker/index.css';
 @import './table/index.css';
+@import './menu/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './modal/index.css';
