--- a/src/shared/themes/carbon/dropdown/dark.css
+++ b/src/shared/themes/carbon/dropdown/dark.css
@@ -21,8 +21,11 @@
   --nuraly-color-dropdown-item-text: #f4f4f4;
   --nuraly-color-dropdown-item-background: transparent;
   --nuraly-color-dropdown-item-background-hover: #353535;
+  --nuraly-color-dropdown-item-text-hover: #ffffff;
   --nuraly-color-dropdown-item-background-focus: #353535;
+  --nuraly-color-dropdown-item-text-focus: #78a9ff;
   --nuraly-color-dropdown-item-background-active: #525252;
+  --nuraly-color-dropdown-item-text-active: #ffffff;
 
   /* Disabled item colors */
   --nuraly-color-dropdown-item-text-disabled: #6f6f6f;
