--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -26,6 +26,7 @@
 @import './colorpicker/index.css';
 @import './table/index.css';
 @import './menu/index.css';
+@import './toast/index.css';
 
 
 /* TODO: Import other component themes as they are created
