--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -27,6 +27,7 @@
 @import './table/index.css';
 @import './menu/index.css';
 @import './toast/index.css';
+@import './alert/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './modal/index.css';
